// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputBox should render properly 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  line-height: 2rem;
  text-align: initial;
}

.c1 {
  display: block;
  color: #ffffff;
}

.c2 {
  border: none;
  margin: 0.5rem 0;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.4rem;
  padding: 1.3rem 1.6rem;
  box-sizing: border-box;
}

.c2::-webkit-input-placeholder {
  color: #98A7B7;
}

.c2::-moz-placeholder {
  color: #98A7B7;
}

.c2:-ms-input-placeholder {
  color: #98A7B7;
}

.c2::placeholder {
  color: #98A7B7;
}

<div>
  <div
    class=""
  >
    <h5
      class="c0 c1"
    >
      input label
    </h5>
    <input
      class="c2"
      id="input-id"
      name="input"
      placeholder="input box"
      required=""
      type="text"
      value="some value"
    />
  </div>
</div>
`;

exports[`InputBox should render properly with full width 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 500;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  line-height: 2rem;
  text-align: initial;
}

.c0 {
  width: 100%;
}

.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c2 {
  display: block;
  color: #ffffff;
}

.c3 {
  border: none;
  margin: 0.5rem 0;
  font-size: 1.4rem;
  line-height: 2rem;
  border-radius: 0.4rem;
  padding: 1.3rem 1.6rem;
  box-sizing: border-box;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #98A7B7;
}

.c3::-moz-placeholder {
  color: #98A7B7;
}

.c3:-ms-input-placeholder {
  color: #98A7B7;
}

.c3::placeholder {
  color: #98A7B7;
}

<div>
  <div
    class="c0"
  >
    <h5
      class="c1 c2"
    >
      input label
    </h5>
    <input
      class="c3"
      id="input-id"
      name="input"
      placeholder="input box"
      required=""
      type="text"
      value="some value"
    />
  </div>
</div>
`;
